# BlackLedger

./: README.md  package-lock.json  package.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
app/: layout.tsx  page.tsx
backend/: .gitignore  README.md  pyproject.toml
backend/blackledger/: config.py  schemas.py
backend/blackledger/sources/: newsapi.py  yfinance_client.py
components/: decoded-title.tsx  globe-section.tsx
components/ui/: globe.tsx
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/app/news/: page.tsx
frontend/components/: globe-section.tsx  workflow-section.tsx
frontend/components/workflow/: nodes.tsx
frontend/lib/: dummy-news.ts
