[project]
name = "blackledger-backend"
version = "0.1.0"
description = "BlackLedger API + agent backend"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "yfinance>=0.2.40",
    "tenacity>=9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"
